--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@vercel/analytics": "^1.0.2",
     "animate.css": "^4.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.0",
